--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    #circle{
+      width : 20px;
+      height : 20px;
+      border-radius : 50%;
+      background: red;
+      position: absolute;
+    }
+  </style>
 </head>
 <body>
-  <div>Rxjs</div>
+  <div id="moviesContainer">
+    <button id="getMoviesBtn">Get Movies</button>
+    <div id="moviesOutput"></div>
+  </div>
+
+  <div id="circle"></div>
   <script src="app.js"></script>
 </body>
 </html>
